--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
 Package: MUSS
 Title: Spike and Slab Variable Selector under Matrix Uncertainty
 Version: 1.0.0
-Authors@R: 
-    person("Shuyu", "Guo", email = "guo_sy@outlook.com", role = c("aut", "cre"))
-Description: In high-dimensional sparse regression with measurement errors in variables, assuming the 
-   errors are Normally distributed with mean 0 and errors for each variable have a specific variance, 
-   then 'MUSS' can conduct variable selection for such case. 'MUSS' select variables by assuming the 
-   regression coefficients have spike and slab priors. 'MUSS' works under EM framework, where indicators 
-   of spike-slab priors and the unknown true design matrix are treated as latent variables. To avoid 
-   the effect of inappropriate choices of spike and slab scale parameters on variable selection, 
-   the final selected regression parameters are obtained following a decreasing sequence of spike 
-   parameters. The path of variable selection can be displayed by function from 'MUSS' package.
+Author: Shuyu Guo  guo_sy@outlook.com
+Description: In high-dimensional sparse regression with measurement error in variables, assuming 
+    the errors are Normally distributed with mean 0 and errors for each variable have a specific 
+    variance, then 'MUSS' can conduct variable selection for such case. 'MUSS' selects variables 
+    by spike and slab priors for the regression coefficients. It works under EM framework, where 
+    the unknown true design matrix and indicators of spike-slab priors are treated as latent variables. 
+    To avoid the effect of inappropriate choices of spike and slab scale parameters on variable 
+    selection, the final output coefficients are obtained following a decreasing sequence of spike 
+    parameters and the path can be displayed by functions from 'MUSS' package.
 License: GPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
